--- a/css/style.scss
+++ b/css/style.scss
@@ -1,5 +1,21 @@
+#back{
+    display: grid;
+    place-items: center;
+    a,button{
+        font-size: 1.5rem;
+        text-decoration: none;
+        padding: 5px;
+        width: 150px;
+        text-align: center;
+        margin: 5px;
+        color: black;
+        background-color: white;
+        &:hover{
+            background-color: gray;
+        }
+    }
+}
 #form{
-
     display: grid;
     grid-template-columns: 1fr;
     width: 20vw;
@@ -28,5 +44,20 @@
         text-decoration: none;
         font-size: 1.5rem;
 
+    }
+}
+#box{
+    display: grid;
+    place-items: center;
+    .color_description{
+        text-align: center;
+        text-transform: capitalize;
+    }
+    .color_box{
+        font-size: 1.5rem;
+        height: 100px;
+        padding: 10px;
+        display: grid;
+        align-items: center;
     }
 }
